Finished Examples section template

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,8 +7,8 @@ $color-primary-dark: #89050f;
 $color-secondary-light-orange: #e9ab00;
 $color-secondary-dark-orange: #b65622;
 
-$color-secondary-light-purple: #2998ff;
-$color-secondary-dark-purple: #402edd;
+$color-tertiary-light-purple: #9c4cf8;
+$color-tertiary-dark-purple: #370566;
 
 $color-grey-dark: #555;
 $color-grey-light-1: #f7f7f7;
