--- a/sass/components/_feature-container.scss
+++ b/sass/components/_feature-container.scss
@@ -10,7 +10,7 @@
 
         &__icon {
             font-size: 6rem;
-            margin-bottom: .9rem;
+            margin-bottom: 1rem;
             
             @include linearGradient;
         }
