--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,8 @@ body {
   transition: all .2s;
   display: inline-block;
   background-image: linear-gradient(to right, #e85e68, #89050f);
-  background-clip: text;
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent; }
   .heading-secondary:hover {
     transform: skewX(2deg) scale(1.02);
@@ -104,6 +104,15 @@ body {
 
 .u-margin-bottom-big {
   margin-bottom: 8rem; }
+
+.u-margin-top-small {
+  margin-top: 1.5rem; }
+
+.u-margin-top-medium {
+  margin-top: 4rem; }
+
+.u-margin-top-big {
+  margin-top: 8rem; }
 
 .u-padding-right-small {
   padding-right: 1.5rem; }
@@ -136,6 +145,12 @@ body {
   background-color: white;
   color: #555; }
   .btn--white::after {
+    background-color: white; }
+
+.btn--red {
+  background-color: #ce3843;
+  color: white; }
+  .btn--red::after {
     background-color: white; }
 
 .btn::after {
@@ -209,24 +224,21 @@ body {
   transition: all .5s; }
   .feature-container__icon {
     font-size: 6rem;
-    margin-bottom: .9rem;
+    margin-bottom: 1rem;
     display: inline-block;
     background-image: linear-gradient(to right, #e85e68, #89050f);
-    background-clip: text;
     -webkit-background-clip: text;
+    background-clip: text;
     color: transparent; }
   .feature-container:hover {
     transform: scale(1.05) translateY(-0.5rem); }
 
 .card {
   perspective: 150rem;
-  -moz-perspective: 150rem;
   position: relative;
-  height: 50rem; }
+  height: 52rem; }
   .card__side {
-    color: white;
-    font-size: 3rem;
-    height: 50rem;
+    height: 52rem;
     transition: all .8s ease;
     position: absolute;
     top: 0;
@@ -234,23 +246,85 @@ body {
     width: 100%;
     backface-visibility: hidden;
     border-radius: 3px;
+    overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
     .card__side--front {
       background-color: white; }
     .card__side--back {
-      background-color: green;
       transform: rotateY(180deg); }
       .card__side--back-orange {
         background-image: linear-gradient(to right bottom, #e9ab00, #b65622); }
-      .card__side--back-purple {
-        background-image: linear-gradient(to right bottom, #2998ff, #402edd); }
       .card__side--back-red {
         background-image: linear-gradient(to right bottom, #e85e68, #89050f); }
+      .card__side--back-purple {
+        background-image: linear-gradient(to right bottom, #9c4cf8, #370566); }
   .card:hover .card__side--front {
-    transform: rotateY(180deg);
+    transform: rotateY(-180deg);
     z-index: 1; }
   .card:hover .card__side--back {
     transform: rotateY(0); }
+  .card__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: overlay;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px; }
+    .card__picture--1 {
+      background-image: linear-gradient(to right bottom, #e9ab00, #b65622), url(../img/nat-5.jpg); }
+    .card__picture--2 {
+      background-image: linear-gradient(to right bottom, #e85e68, #89050f), url(../img/nat-6.jpg); }
+    .card__picture--3 {
+      background-image: linear-gradient(to right bottom, #9c4cf8, #370566), url(../img/nat-7.jpg); }
+  .card__heading {
+    font-size: 2.2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: white;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 70%; }
+  .card__heading-span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card__heading-span--orange {
+      background-image: linear-gradient(to right bottom, rgba(233, 171, 0, 0.85), rgba(182, 86, 34, 0.85)); }
+    .card__heading-span--red {
+      background-image: linear-gradient(to right bottom, rgba(232, 94, 104, 0.85), rgba(137, 5, 15, 0.85)); }
+    .card__heading-span--purple {
+      background-image: linear-gradient(to right bottom, rgba(156, 76, 248, 0.85), rgba(55, 5, 102, 0.85)); }
+  .card__details {
+    padding: 3rem; }
+    .card__details ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; }
+      .card__details ul li {
+        text-align: center;
+        font-size: 1.6rem;
+        padding: 1rem; }
+        .card__details ul li:not(:last-child) {
+          border-bottom: 1px solid #e6e6e6; }
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center; }
+  .card__funding-container {
+    color: white;
+    margin-bottom: 8rem; }
+  .card__funding-text {
+    font-size: 1.6rem;
+    text-transform: uppercase; }
+  .card__funding-value {
+    font-size: 6rem;
+    font-weight: 100; }
 
 .header {
   height: 95vh;
@@ -318,5 +392,5 @@ body {
 
 .section-examples {
   background-color: #f7f7f7;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 15rem 0;
   margin-top: -10rem; }
