--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -5,5 +5,9 @@
 .u-margin-bottom-medium { margin-bottom: 4rem;}
 .u-margin-bottom-big { margin-bottom: 8rem;}
 
+.u-margin-top-small {margin-top: 1.5rem;}
+.u-margin-top-medium { margin-top: 4rem;}
+.u-margin-top-big { margin-top: 8rem;}
+
 .u-padding-right-small {padding-right: 1.5rem}
 .u-padding-right-medium {padding-right: 4rem}
