--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -36,6 +36,15 @@
             }
     }
 
+    &--red {
+        background-color: $color-primary;
+        color: $color-white;
+    
+            &::after {
+                background-color: $color-white;
+                }
+        }
+
     &::after {
     content: "";
     display: inline-block;
