--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,13 +1,11 @@
-.card {
+.card  {
     perspective: 150rem;
-    -moz-perspective: 150rem;
     position: relative;   
-    height: 50rem;
+    height: 52rem;
 
     &__side {        
-        color: white;
-        font-size: 3rem;
-        height: 50rem;
+        
+        height: 52rem;
         transition: all .8s ease;
         position: absolute;
         top: 0;
@@ -15,41 +13,139 @@
         width: 100%;
         backface-visibility: hidden;
         border-radius: 3px;
+        overflow: hidden;
         box-shadow: 0 1.5rem 4rem (rgba($color-black, .15));
             
 
         &--front {
-            background-color: $color-white;
+            background-color: $color-white;            
         }
 
         
         &--back {
-            background-color: green;
+            
             transform: rotateY(180deg);
 
             &-orange {
                 background-image: linear-gradient(to right bottom, $color-secondary-light-orange, $color-secondary-dark-orange)
             }
 
-            &-purple {
-                background-image: linear-gradient(to right bottom, $color-secondary-light-purple, $color-secondary-dark-purple)
-            }
-
             &-red {
                 background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark)
             }
-            
-        }
+
+            &-purple {
+                background-image: linear-gradient(to right bottom, $color-tertiary-light-purple, $color-tertiary-dark-purple)
+            }            
+        }        
     }
 
     &:hover &__side--front {
-    transform: rotateY(180deg);
+    transform: rotateY(-180deg);
     z-index: 1;
 
     }   
     
     &:hover &__side--back {
         transform: rotateY(0);
+
+    }
+    
+    &__picture {
+        background-size: cover;
+        height: 23rem;
+        background-blend-mode: overlay;
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        border-top-right-radius: 3px;
+        border-top-left-radius: 3px;
+
+
+        &--1 {
+            background-image: linear-gradient(to right bottom, $color-secondary-light-orange, $color-secondary-dark-orange), url(../img/nat-5.jpg);
+        }
+
+        &--2 {
+            background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), url(../img/nat-6.jpg);
+        }
+
+        &--3 {
+            background-image: linear-gradient(to right bottom, $color-tertiary-light-purple, $color-tertiary-dark-purple), url(../img/nat-7.jpg);
+        }            
+    }
+
+    &__heading {
+        font-size: 2.2rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        text-align: right;
+        color: $color-white;
+        position: absolute;
+        top: 12rem;
+        right: 2rem;
+        width: 70%;
         
-        } 
+    }
+
+    &__heading-span {
+        padding: 1rem 1.5rem;
+        -webkit-box-decoration-break: clone;
+        box-decoration-break: clone;
+
+        &--orange {
+           background-image: linear-gradient(to right bottom, rgba($color-secondary-light-orange, .85), rgba($color-secondary-dark-orange, .85));
+        }
+
+        &--red {
+            background-image: linear-gradient(to right bottom, rgba($color-primary-light, .85), rgba($color-primary-dark, .85));
+         }
+
+         &--purple {
+            background-image: linear-gradient(to right bottom, rgba($color-tertiary-light-purple, .85), rgba($color-tertiary-dark-purple, .85));
+         }
+    }
+
+    &__details {
+        padding: 3rem;
+
+        ul {
+            list-style: none;
+            width: 80%;
+            margin: 0 auto;
+
+            li {
+                text-align: center;
+                font-size: $default-font-size;
+                padding: 1rem;
+
+                &:not(:last-child) {
+                    border-bottom: 1px solid $color-grey-light-2;
+                }
+            }
+        }
+    }
+
+    &__cta {        
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%;
+        text-align: center;
+    }
+    
+    &__funding-container {        
+        color: $color-white;
+        margin-bottom: 8rem;
+    }
+    
+    &__funding-text {
+        font-size: $default-font-size;
+        text-transform: uppercase;        
+    }
+
+    &__funding-value {
+        font-size: 6rem;
+        font-weight: 100;       
+    }
 }
