Fixed images for better performance

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,7 @@
 @import "components/composition";
 @import "components/feature-container";
 @import "components/card";
-
+@import "components/story";
 
 @import "layout/header";
 @import "layout/grid";
