--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -15,7 +15,7 @@
         float: left;
         -webkit-shape-outside: circle(50% at 50% 50%);
         shape-outside: circle(50% at 50% 50%);
-        -webkit-clip-path: circle(50%);
+        -webkit-clip-path: circle(50% at 50% 50%);
         clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(12deg);
         position: relative;
@@ -23,15 +23,14 @@
     }
 
     &__img {
-        height: 100%;
+        height: 100%;        
         transform: translateX(-4rem) scale(1.4);
         backface-visibility: hidden;
         transition: all .5s;
 
     }
 
-    &__text {
-        
+    &__text {        
         transform: skewX(12deg);
     }
 
@@ -49,6 +48,7 @@
         opacity: 0;
         transition: all .5s;
         backface-visibility: hidden;
+        
     }
     &:hover &__caption {
         opacity: 1;
