Started the Newsletter layout

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -12,7 +12,7 @@
         left: 0;
         width: 100%;
         backface-visibility: hidden;
-        border-radius: 3px;
+        border-radius: $border-radius;
         overflow: hidden;
         box-shadow: 0 1.5rem 4rem (rgba($color-black, .15));
             
@@ -57,8 +57,8 @@
         background-blend-mode: overlay;
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-        border-top-right-radius: 3px;
-        border-top-left-radius: 3px;
+        border-top-right-radius: $border-radius;
+        border-top-left-radius: $border-radius;
 
 
         &--1 {
