--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -4,7 +4,7 @@
         &__photo {
             width: 55%;
             box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
-            border-radius: 2px;
+            border-radius: $border-radius;
             position: absolute;
             transition: all .5s;
             outline-offset: 2rem;
