--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ body {
   .composition__photo {
     width: 55%;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
-    border-radius: 2px;
+    border-radius: 3px;
     position: absolute;
     transition: all .5s;
     outline-offset: 2rem; }
@@ -460,3 +460,14 @@ body {
 .section-stories {
   padding: 15rem 0;
   position: relative; }
+
+.section-newsletter {
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, #fa8e96, #89050f); }
+
+.newsletter {
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
+  background-size: cover;
+  height: 50rem;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4); }
