--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -23,3 +23,6 @@ $default-font-size: 1.6rem;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem; 
+
+//Border-Radius
+$border-radius: 3px;
