--- a/sass/components/_feature-container.scss
+++ b/sass/components/_feature-container.scss
@@ -3,7 +3,7 @@
     font-size: 1.5rem;
     padding: 2.5rem;
     text-align: center;
-    border-radius: 3px;
+    border-radius: $border-radius;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
     transition: all .5s;
     
