--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,34 +1,56 @@
 .section-about {
-    background-color: $color-grey-light-1;
-    padding: 25rem 0;
-    margin-top: -15vh;
+  background-color: $color-grey-light-1;
+  padding: 25rem 0;
+  margin-top: -15vh;
 }
 
 .section-features {
-    padding: 20rem 0;
-    background-image: linear-gradient(
-        to right bottom,
-        rgba($color-primary-light-pale, 0.25),
-        rgba($color-primary-dark, 0.25)
-      ),
-      url(../img/nat-4.jpg);
-    background-size: cover;
-    background-position-y: top;
-    transform: skewY(-6deg);
-    margin-top: -10rem;
+  padding: 20rem 0;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-primary-light-pale, 0.25),
+      rgba($color-primary-dark, 0.25)
+    ),
+    url(../img/nat-4.jpg);
+  background-size: cover;
+  background-position-y: top;
+  transform: skewY(-6deg);
+  margin-top: -10rem;
 
-        & > * {
-            transform: skewY(6deg);
-        }
+  & > * {
+    transform: skewY(6deg);
+  }
 }
 
 .section-examples {
-    background-color: $color-grey-light-1;
-    padding: 25rem 0 15rem 0;
-    margin-top: -10rem;
+  background-color: $color-grey-light-1;
+  padding: 25rem 0 15rem 0;
+  margin-top: -10rem;
 }
 
 .section-stories {
-    padding: 15rem 0;    
-    position: relative;
+  padding: 15rem 0;
+  position: relative;
+}
+
+.section-newsletter {
+  padding: 15rem 0;
+  background-image: linear-gradient(
+    to right bottom,
+    $color-primary-light-pale,
+    $color-primary-dark
+  );
+}
+
+.newsletter {
+  background-image: linear-gradient(
+        105deg,
+        rgba($color-white, .9) 0%, 
+        rgba($color-white, .9) 50%, 
+        transparent 50%), 
+        url(../img/nat-10.jpg);
+  background-size: cover;
+  height: 50rem;
+  border-radius: $border-radius;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
 }
