--- a/css/style.css
+++ b/css/style.css
@@ -388,6 +388,22 @@ body {
     height: 100%;
     object-fit: cover; }
 
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
+
+.form__input {
+  font-size: 1.5rem;
+  font-family: inherit;
+  padding: 1.5rem 2rem;
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border: none;
+  border-bottom: 3px solid transparent; }
+  .form__input:focus {
+    outline: none;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+    border-bottom: 3px solid #ce3843; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(250, 142, 150, 0.25), rgba(137, 5, 15, 0.25)), url(../img/hero.jpg);
@@ -471,3 +487,6 @@ body {
   height: 50rem;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4); }
+  .newsletter__form {
+    width: 50%;
+    padding: 6rem; }
