Animated the Placeholder and Label elements

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,8 +11,10 @@ $color-tertiary-light-purple: #9c4cf8;
 $color-tertiary-dark-purple: #370566;
 
 $color-grey-dark: #555;
+$color-grey-dark-2: #999;
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #e6e6e6;
+
 $color-white: white;
 $color-black: #000;
 
