--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,13 +1,13 @@
-.u-center-text {text-align: center;}
-.u-justify-text {text-align: justify;}
+.u-center-text {text-align: center !important;}
+.u-justify-text {text-align: justify !important;}
 
-.u-margin-bottom-small {margin-bottom: 1.5rem;}
-.u-margin-bottom-medium { margin-bottom: 4rem;}
-.u-margin-bottom-big { margin-bottom: 8rem;}
+.u-margin-bottom-small {margin-bottom: 1.5rem !important;}
+.u-margin-bottom-medium { margin-bottom: 4rem !important;}
+.u-margin-bottom-big { margin-bottom: 8rem !important;}
 
-.u-margin-top-small {margin-top: 1.5rem;}
-.u-margin-top-medium { margin-top: 4rem;}
-.u-margin-top-big { margin-top: 8rem;}
+.u-margin-top-small {margin-top: 1.5rem !important;}
+.u-margin-top-medium { margin-top: 4rem !important;}
+.u-margin-top-big { margin-top: 8rem !important;}
 
-.u-padding-right-small {padding-right: 1.5rem}
-.u-padding-right-medium {padding-right: 4rem}
+.u-padding-right-small {padding-right: 1.5rem !important}
+.u-padding-right-medium {padding-right: 4rem !important}
