--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,6 @@
 
 .btn {   
-
+    &,
     &:link,
     &:visited {
     text-transform: uppercase;
@@ -11,6 +11,10 @@
     transition: all .2s;
     position: relative;
     font-size: 1.3rem;
+
+    //Changes for the button html element
+    border: none;
+    cursor: pointer;
     }
 
     &:hover {
