--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,7 +1,7 @@
 .form {
     
     &__group:not(:last-child) {
-        margin-bottom: 2rem;
+        margin-bottom: 1.5rem;
     }
 
     &__input {
@@ -31,19 +31,16 @@
         
     
         &::-webkit-input-placeholder {
-            color: $color-grey-dark-2;
+            color: $color-grey-dark;
 
-        }
-
-       
+        }      
        
     }
-
     
 
     &__label {
         font-size: 1.2rem;
-        font-weight: 700;
+        font-weight: 700;        
         margin-left: 2rem;
         margin-top: .7rem;
         display: block;
@@ -54,6 +51,58 @@
         opacity: 0;
         visibility: hidden;
         transform: translateY(-4rem);
+    }
+
+    &__radio-group {
+        width: 49%;
+        display: inline-block;
+        color: $color-black;
+        font-weight: 700;
+
+    }
+
+    &__radio-input {
+        display: none;
+    }
+
+    &__radio-label {
+        font-size: $default-font-size;
+        cursor: pointer; 
+        position: relative; 
+        padding-left: 4.5rem;    
+    }
+
+    &__radio-button {
+        height: 3rem; 
+        width: 3rem;
+        border: 5px solid $color-primary;
+        border-radius: 50%;
+        display: inline-block;
+        position: absolute;
+        left: 0;
+        top: -4;
+
+        
+        &::after {
+            content: "";
+            display: block;
+            height: 1.3rem;
+            width: 1.3rem;
+            border-radius: 50%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: $color-primary;
+            opacity: 0;
+            transition: opacity .2s;
+        }
+        
+    }
+
+    &__radio-input:checked ~ &__radio-label &__radio-button::after {
+        opacity: 1;
+
     }
 
 
