--- a/css/style.css
+++ b/css/style.css
@@ -517,6 +517,46 @@ body {
   .row .col-3-of-4 {
     width: calc( 3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
 
+.footer {
+  background-color: #e6e6e6;
+  color: #555;
+  padding: 10rem 0;
+  font-size: 1.4rem;
+  font-weight: 600; }
+  .footer__logo-container {
+    display: block;
+    text-align: center;
+    margin-bottom: 8rem; }
+  .footer__logo {
+    width: 13rem;
+    height: auto;
+    padding: 3rem;
+    clip-path: circle(50%);
+    background-color: #ce3843; }
+  .footer__navigation {
+    border-top: 1px solid #999;
+    padding-top: 2rem; }
+  .footer__list {
+    list-style: none;
+    display: flex;
+    justify-content: space-between; }
+  .footer__item:not(:last-child) {
+    margin-right: 1.5rem; }
+  .footer__link:link, .footer__link:visited {
+    color: #555;
+    background-color: #e6e6e6;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-block;
+    transition: all .3s; }
+  .footer__link:hover, .footer__link:active {
+    color: #ce3843;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+    transform: rotate(4deg) scale(1.1); }
+  .footer__copyright {
+    border-top: 1px solid #999;
+    padding-top: 2rem; }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
