--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,8 @@ body {
     transform: scaleX(1.1) scaleY(1.2);
     opacity: 0; }
 
-.btn:active {
+.btn:active, .btn:focus {
+  outline: none;
   transform: translateY(-0.1rem);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5); }
 
