--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -7,24 +7,27 @@
 
     &__button {
         background-color: $color-white;
-        height: 7rem;
-        width: 7rem;
-        border-radius: 50%;
-        position: fixed;
-        top: 6rem;
-        right: 6rem;
-        z-index: 20;
-        box-shadow: 0 1rem 3rem rgba($color-black, .1) ;
-        
-    }
-
-    &__background {
         height: 6rem;
         width: 6rem;
         border-radius: 50%;
         position: fixed;
-        top: 6.5rem;
-        right: 6.5rem;
+        top: 5.5rem;
+        right: 5.5rem;
+        z-index: 20;
+        box-shadow: 0 1rem 3rem rgba($color-black, .4);
+        text-align: center;
+        cursor: pointer;
+        transition: all .5s;
+        
+    }
+
+    &__background {
+        height: 5rem;
+        width: 5rem;
+        border-radius: 50%;
+        position: fixed;
+        top: 6rem;
+        right: 6rem;
         background-image: radial-gradient($color-primary-light, $color-primary-dark);
         z-index: 10;
         transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
@@ -83,12 +86,60 @@
     }
 
     &__checkbox:checked ~ &__background {
-        transform: scale(80);
+        transform: scale(100);
     }
 
     &__checkbox:checked ~ &__nav {
         opacity: 1;
         width: 100%;
     }
+
+    &__icon {
+        position: relative;
+        margin-top: 3rem;
+
+        &,
+        &::before,
+        &::after {
+            width: 2.5rem;
+            height: 1.3px;
+            background-color: $color-grey-dark;
+            display: inline-block;            
+        
+        }
+
+        
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            left: 0; 
+
+        }
+
+        &::before {top: -.8rem;}
+
+        &::after {top: .8rem;}
+    }
+
+    &__button:hover &__icon::before {top: -1rem;}
+
+    &__button:hover &__icon::after {top: 1rem;}
+
+    &__checkbox:checked + &__button &__icon {
+        background-color: transparent;
+    }
+
+    &__checkbox:checked + &__button &__icon::before {
+        top: 0;
+        transform: rotate(45deg);
+    }
+
+    &__checkbox:checked + &__button &__icon::after {
+        top: 0;
+        transform: rotate(-45deg);
+    }
+
+
 
 }
