--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -13,3 +13,11 @@
             background-clip: text;
             color: transparent;
 }
+
+@mixin absCenter {
+        position: absolute;           
+        top: 50%;  
+        left: 50%;                
+        transform: translate(-50%, -50%);
+}
+
