--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -126,10 +126,8 @@
     }
 
     &__cta {        
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        @include absCenter;
+        
         width: 90%;
         text-align: center;
     }
