--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -84,15 +84,14 @@
 
         
         &::after {
+            @include absCenter;
+            
             content: "";
             display: block;
             height: 1.3rem;
             width: 1.3rem;
             border-radius: 50%;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            
             background-color: $color-primary;
             opacity: 0;
             transition: opacity .2s;
