--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -27,11 +27,9 @@
       }
   
       &__text-container {
-          position: absolute;
-          top: 50%;
-          left: 50%;
+        @include absCenter;
           text-align: center;
-          transform: translate(-50%, -50%);
+          
       }
   }
   
