--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -9,5 +9,7 @@
 .u-margin-top-medium { margin-top: 4rem !important;}
 .u-margin-top-big { margin-top: 8rem !important;}
 
+.u-margin-right-medium {margin-right: 4rem !important}
+
 .u-padding-right-small {padding-right: 1.5rem !important}
 .u-padding-right-medium {padding-right: 4rem !important}
