--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -1,11 +1,15 @@
 .popup {
+
     position: fixed;
     top: 0;
     left: 0;
     z-index: 60;
     width: 100%;
     height: 100vh;        
-    background-color: rgba($color-black, .8);  
+    background-color: rgba($color-black, .8);    
+    opacity: 0;
+    visibility: hidden;
+    transition: all .4s;    
     
     &__content {
         @include absCenter;
@@ -14,8 +18,12 @@
         background-color: $color-white;        
         box-shadow: 0 2rem 4rem rgba($color-black, .2); 
         border-radius: 3px;  
-        display: table; 
-        overflow: hidden;  
+        display: table;
+        overflow: hidden; 
+
+        opacity: 0; 
+        transform: translate(-50%, -50%) scale(.3);
+        transition: all .5s .2s;
         
         &--left {
             width: 33.33%;             
@@ -25,23 +33,52 @@
                 & img {
                 display: block;
                 width: 100%;                                       
-            }
+                }       
         }
-        
+
         &--right {
             width: 66.67%;            
             display: table-cell; 
             vertical-align: middle;
             padding: 3rem 5rem;
-        }
+        }        
     }
 
     &__text {
         font-size: 1.4rem;
-        margin-bottom: 4rem;        
+        margin-bottom: 5rem;        
         column-count: 2;
         column-gap: 4rem;
         column-rule: 1px solid $color-grey-light-2;
         hyphens: auto;
+        }
+    
+    &__back {       
+        &:link,
+        &:visited {
+            color: $color-grey-dark;
+            position: absolute;
+            top: 1.5rem;
+            right: 2.5rem;
+            font-size: 4rem;
+            display: inline-block;
+            text-decoration: none;
+            transition: all .3s;
+            line-height: 1;
+        }
+
+        &:hover {
+            color: $color-primary;
+        }       
+    }
+    
+    &:target {
+        opacity: 1;
+        visibility: visible;
+    }
+    
+    &:target &__content {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
     }
 }
