--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -62,15 +62,15 @@
 
 
         &--1 {
-            background-image: linear-gradient(to right bottom, $color-secondary-light-orange, $color-secondary-dark-orange), url(../img/nat-5.jpg);
+            background-image: linear-gradient(to right bottom, $color-secondary-light-orange, $color-secondary-dark-orange), url(../img/books.jpg);
         }
 
         &--2 {
-            background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), url(../img/nat-6.jpg);
+            background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), url(../img/music.jpg);
         }
 
         &--3 {
-            background-image: linear-gradient(to right bottom, $color-tertiary-light-purple, $color-tertiary-dark-purple), url(../img/nat-7.jpg);
+            background-image: linear-gradient(to right bottom, $color-tertiary-light-purple, $color-tertiary-dark-purple), url(../img/married.jpg);
         }            
     }
 
