--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -49,7 +49,7 @@
         rgba($color-white, .7) 0%, 
         rgba($color-white, .7) 50%, 
         transparent 50%), 
-        url(../img/nat-10.jpg);
+        url(../img/mailboxes.jpg);
   background-size: cover;  
   height: 50rem;
   border-radius: $border-radius;
