Feat: add media queries

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -19,5 +19,42 @@
         top: 50%;  
         left: 50%;                
         transform: translate(-50%, -50%);
+};
+
+
+//Media query
+
+/*
+Breakpoint options
+- phone
+- tab-portrait
+- tab-landscape
+- big-desktop
+*/
+
+@mixin respond($breakpoint) {
+        @if $breakpoint == phone {
+                @media (max-width: 600px) {
+                        @content
+                }                
+        };
+
+        @if $breakpoint == tab-portrait {
+                @media (max-width: 900px) {
+                        @content
+                }                
+        };
+
+        @if $breakpoint == tab-landscape {
+                @media (max-width: 1200px) {
+                        @content
+                }                
+        };
+
+        @if $breakpoint == big-desktop {
+                @media (min-width: 1800px) {
+                        @content
+                }                
+        };
 }
 
