--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,9 +10,28 @@
 html {
   //1rem = 10px
   font-size: 62.5%;
+
+  @include respond(tab-landscape) {
+    font-size: 56.25%;
+  }
+
+  @include respond(tab-portrait) {
+      font-size: 50%;
+    }
+
+  @include respond(phone) {
+    font-size: 45%;
+  }
+  
+
+  @include respond(big-desktop) {
+    font-size: 75%;
+  }
+  
 }
 
-body {
-  
+body {  
   box-sizing: border-box;
 }
+
+
