--- a/css/style.css
+++ b/css/style.css
@@ -56,14 +56,17 @@ html {
       font-size: 75%; } }
 
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding: 3rem; }
+  @media (max-width: 900px) {
+    body {
+      padding: 0; } }
 
 body {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   line-height: 1.7;
-  color: #777;
-  padding: 3rem; }
+  color: #777; }
 
 .heading-primary {
   color: white;
@@ -77,6 +80,10 @@ body {
     font-weight: 500;
     letter-spacing: 3.6rem;
     animation: moveInLeft 1.1s ease-out; }
+    @media (max-width: 600px) {
+      .heading-primary--main {
+        letter-spacing: 2.2rem;
+        font-size: 4.6rem; } }
   .heading-primary--sub {
     display: block;
     font-size: 2rem;
@@ -95,6 +102,12 @@ body {
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent; }
+  @media (max-width: 900px) {
+    .heading-secondary {
+      font-size: 2.9rem; } }
+  @media (max-width: 600px) {
+    .heading-secondary {
+      font-size: 2.4rem; } }
   .heading-secondary:hover {
     transform: skewX(2deg) scale(1.02);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.3); }
@@ -120,9 +133,15 @@ body {
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
+  @media (max-width: 900px) {
+    .u-margin-bottom-medium {
+      margin-bottom: 3rem !important; } }
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
+  @media (max-width: 900px) {
+    .u-margin-bottom-big {
+      margin-bottom: 5rem !important; } }
 
 .u-margin-top-small {
   margin-top: 1.5rem !important; }
@@ -146,6 +165,10 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -15vh; }
+  @media (max-width: 900px) {
+    .section-about {
+      padding: 20rem 0;
+      margin-bottom: 15vh; } }
 
 .section-features {
   padding: 20rem 0;
@@ -161,14 +184,23 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem; }
+  @media (max-width: 900px) {
+    .section-examples {
+      padding: 20rem 0 10rem 0; } }
 
 .section-stories {
   padding: 15rem 0;
   position: relative; }
+  @media (max-width: 900px) {
+    .section-stories {
+      padding: 10rem 0; } }
 
 .section-newsletter {
   padding: 17rem 0;
   background-image: linear-gradient(to right bottom, #fa8e96, #89050f); }
+  @media (max-width: 900px) {
+    .section-newsletter {
+      padding: 12rem 0; } }
 
 .newsletter {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.7) 50%, transparent 50%), url(../img/mailboxes.jpg);
@@ -187,6 +219,12 @@ body {
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
   position: relative; }
+  @media (max-width: 900px) {
+    .header {
+      clip-path: polygon(0 0, 100% 0, 100% 83vh, 0 100%); } }
+  @media (max-width: 600px) {
+    .header {
+      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
   .header__logo-container {
     position: absolute;
     top: 3.5rem;
@@ -208,6 +246,13 @@ body {
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
+    @media (max-width: 900px) {
+      .row:not(:last-child) {
+        margin-bottom: 5rem; } }
+  @media (max-width: 900px) {
+    .row {
+      max-width: 50rem;
+      padding: 0 3rem; } }
   .row::after {
     content: "";
     display: table;
@@ -216,18 +261,25 @@ body {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
+      @media (max-width: 900px) {
+        .row [class^="col-"]:not(:last-child) {
+          margin-right: 0;
+          margin-bottom: 5rem; } }
+    @media (max-width: 900px) {
+      .row [class^="col-"] {
+        width: 100% !important; } }
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
     width: calc((100% - 2 * 6rem) / 3); }
   .row .col-2-of-3 {
-    width: calc( 2 * ((100% - 2 * 6rem) / 3) + 6rem); }
+    width: calc( 2 * ((100% - 2 * 6rem) / 3) + 6rem); }
   .row .col-1-of-4 {
     width: calc((100% - 3 * 6rem) / 4); }
   .row .col-2-of-4 {
-    width: calc( 2 * ((100% - 3 * 6rem) / 4) + 6rem); }
+    width: calc( 2 * ((100% - 3 * 6rem) / 4) + 6rem); }
   .row .col-3-of-4 {
-    width: calc( 3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
+    width: calc( 3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
 
 .footer {
   background-color: #e6e6e6;
@@ -235,6 +287,9 @@ body {
   padding: 10rem 0;
   font-size: 1.4rem;
   font-weight: 600; }
+  @media (max-width: 900px) {
+    .footer {
+      padding: 7rem 0; } }
   .footer__logo-container {
     display: block;
     text-align: center;
@@ -248,6 +303,9 @@ body {
   .footer__navigation {
     border-top: 1px solid #999;
     padding-top: 2rem; }
+    @media (max-width: 1200px) {
+      .footer__navigation {
+        padding: 2rem; } }
   .footer__list {
     list-style: none;
     display: flex;
@@ -267,7 +325,11 @@ body {
     transform: rotate(4deg) scale(1.1); }
   .footer__copyright {
     border-top: 1px solid #999;
-    padding-top: 2rem; }
+    padding-top: 2rem;
+    width: 100%; }
+    @media (max-width: 1200px) {
+      .footer__copyright {
+        padding: 2rem; } }
 
 .navigation__checkbox {
   display: none; }
@@ -285,6 +347,10 @@ body {
   text-align: center;
   cursor: pointer;
   transition: all .5s; }
+  @media (max-width: 900px) {
+    .navigation__button {
+      top: 3.5rem;
+      right: 3.5rem; } }
 
 .navigation__background {
   height: 5rem;
@@ -296,6 +362,10 @@ body {
   background-image: radial-gradient(#e85e68, #89050f);
   z-index: 10;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
+  @media (max-width: 900px) {
+    .navigation__background {
+      top: 4rem;
+      right: 4rem; } }
 
 .navigation__nav {
   height: 100vh;
@@ -321,7 +391,7 @@ body {
 
 .navigation__link:link, .navigation__link:visited {
   display: inline-block;
-  font-size: 2.8rem;
+  font-size: 2.6rem;
   font-weight: 300;
   padding: 1rem 3rem;
   color: white;
