--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -32,6 +32,12 @@ html {
 
 body {  
   box-sizing: border-box;
-}
+  padding: 3rem;  
+
+  @include respond(tab-portrait) {
+    padding: 0;
+    }  
+  }
+
 
 
