--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,14 +3,16 @@ body {
     font-weight: 400;
     line-height: 1.7;
     color: #777;
-    padding: 3rem;
+    
     
   }
+
 .heading-primary {
     color: $color-white;
     text-transform: uppercase;
     backface-visibility: hidden;
-    margin-bottom: 5rem;
+    margin-bottom: 5rem;    
+
       &--main {
       display: block;
       padding-left: 1.5rem;
@@ -18,6 +20,11 @@ body {
       font-weight: 500;
       letter-spacing: 3.6rem;
       animation: moveInLeft 1.1s ease-out;
+
+      @include respond(phone) {
+        letter-spacing: 2.2rem;
+        font-size: 4.6rem;
+      }
       }
   
       &--sub {
@@ -38,6 +45,13 @@ body {
     transition: all .2s;
 
     @include linearGradient;
+
+    @include respond(tab-portrait) {      
+      font-size: 2.9rem;
+    }
+    @include respond(phone) {      
+      font-size: 2.4rem;
+    }
 
       &:hover {
         transform: skewX(2deg) scale(1.02);
