--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -2,8 +2,20 @@
 .u-justify-text {text-align: justify !important;}
 
 .u-margin-bottom-small {margin-bottom: 1.5rem !important;}
-.u-margin-bottom-medium { margin-bottom: 4rem !important;}
-.u-margin-bottom-big { margin-bottom: 8rem !important;}
+.u-margin-bottom-medium { 
+    margin-bottom: 4rem !important;
+
+    @include respond(tab-portrait) {
+        margin-bottom: 3rem !important;
+      }
+}
+.u-margin-bottom-big { 
+    margin-bottom: 8rem !important;
+
+    @include respond(tab-portrait) {
+        margin-bottom: 5rem !important;
+      }
+}
 
 .u-margin-top-small {margin-top: 1.5rem !important;}
 .u-margin-top-medium { margin-top: 4rem !important;}
