--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,6 +5,9 @@
     font-size: 1.4rem;
     font-weight: 600;
     
+    @include respond(tab-portrait) {
+        padding: 7rem 0;
+    }
     
     &__logo-container {
         display: block;
@@ -25,7 +28,12 @@
     
     &__navigation {
         border-top: 1px solid $color-grey-dark-2;
-        padding-top: 2rem;       
+        padding-top: 2rem;   
+        
+        @include respond(tab-landscape) {
+            padding: 2rem;
+            
+        }
     }
 
     &__list {
@@ -62,6 +70,13 @@
 
     &__copyright {
         border-top: 1px solid $color-grey-dark-2;
-        padding-top: 2rem;               
+        padding-top: 2rem;
+        width: 100%;
+        
+        @include respond(tab-landscape) {            
+                padding: 2rem;
+                
+            
+        }
     }
 }
