--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,12 @@
 .section-about {
   background-color: $color-grey-light-1;
   padding: 25rem 0;
-  margin-top: -15vh;
+  margin-top: -15vh;  
+
+  @include respond(tab-portrait) {
+    padding: 20rem 0;
+    margin-bottom: 15vh;
+  }
 }
 
 .section-features {
@@ -26,11 +31,19 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem;
+
+  @include respond(tab-portrait) {
+    padding: 20rem 0 10rem 0;
+  }
 }
 
 .section-stories {
   padding: 15rem 0;
   position: relative;
+
+  @include respond(tab-portrait) {
+    padding: 10rem 0;
+  }
 }
 
 .section-newsletter {
@@ -40,6 +53,10 @@
     $color-primary-light-pale,
     $color-primary-dark
   );
+
+  @include respond(tab-portrait) {
+    padding: 12rem 0;
+  }
   
 }
 
