--- a/sass/components/_feature-container.scss
+++ b/sass/components/_feature-container.scss
@@ -6,7 +6,10 @@
     border-radius: $border-radius;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);    
     transition: all .5s;
-    
+
+        @include respond(tab-portrait){
+            padding: 2rem;            
+        }    
 
         &__icon {
             font-size: 6rem;
