--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -12,7 +12,7 @@
 
   @include respond(tab-portrait) {
     max-width: 50rem;
-    padding: 0 3rem;
+    padding: 0 4rem;
 }
 
   @include clearfix;
@@ -26,7 +26,7 @@
       @include respond(tab-portrait) {
         margin-right: 0;
         margin-bottom: $gutter-vertical-small;
-    }
+      }
     }
 
     @include respond(tab-portrait) {
@@ -41,15 +41,18 @@
   .col-1-of-3 {
     width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
   }
-
   .col-2-of-3 {
     width: calc(
       2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal}
     );
   }
-
   .col-1-of-4 {
-    width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+      width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+
+    @include respond(tab-portrait) {
+      padding: 0 5rem;
+    }
+
   }
 
   .col-2-of-4 {
