--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,9 +3,8 @@
   padding: 25rem 0;
   margin-top: -15vh;  
 
-  @include respond(tab-portrait) {
-    padding: 20rem 0;
-    margin-bottom: 15vh;
+  @include respond(tab-portrait) {    
+    padding-bottom: 45rem;    
   }
 }
 
@@ -25,6 +24,10 @@
   & > * {
     transform: skewY(6deg);
   }
+
+  @include respond(tab-portrait) {
+    padding: 10rem 0;
+  }
 }
 
 .section-examples {
@@ -33,7 +36,10 @@
   margin-top: -10rem;
 
   @include respond(tab-portrait) {
-    padding: 20rem 0 10rem 0;
+    padding: 20rem 20rem 10rem;
+  }
+  @include respond(phone) {
+    padding: 20rem 5rem 10rem;
   }
 }
 
@@ -74,7 +80,6 @@
 
   &__form {
     width: 50%;
-    padding: 6rem;
-    
+    padding: 6rem;    
   }
 }
